[gd_scene load_steps=3 format=2]

[ext_resource path="res://Canvas/SymmetryGrips.gd" type="Script" id=1]
[ext_resource path="res://Grip.tscn" type="PackedScene" id=2]

[node name="SymmetryGrips" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalGrip1" parent="." instance=ExtResource( 2 )]

[node name="HorizontalGrip2" parent="." instance=ExtResource( 2 )]

[node name="VerticalGrip1" parent="." instance=ExtResource( 2 )]

[node name="VerticalGrip2" parent="." instance=ExtResource( 2 )]
